symfony_project/web/styles/styles.css
/* Background 8DC26F */

html, body {
    padding: 0px;
    margin: 0px;
    font-family: arial, sans-serif;
    font-size: 12pt;
    height: 100vh;
    width: 100vw;
}

body {
    display: grid;
    grid-template-rows: 50px auto;
    grid-template-columns: 16% auto;
    grid-template-areas:
        "topnav topnav"
        "nav-left main";
}

body.hidden_hamburger {
    grid-template-areas:
        "topnav topnav"
        "main main";
    transition: grid-template-areas 350ms ease-in-out;
}

.green {
    color: green;
}

.yellow {
    color: yellow;
}

.red {
    color: red;
}

.orange {
    color: #fdb813;
}

.hidden {
    display: none;
}

#main {
    grid-area: main;
    background-color: lightgray;
    overflow-y: scroll;
    overflow-x: hidden;
    min-height: 200px;
}

.floatingControls {
    position: fixed;
    bottom: 25px;
    right: 45px;
    z-index: 100;
    display: flex;
    border: 2px solid #003963;
    border-radius: 5px;
    padding: 7px 5px 5px 5px;
    background: #e9e9e9;
}

.floatingLink {
    margin: 0 5px;
}

.floatingLink:hover {
    cursor: pointer;
    filter: brightness(150%);
}

.disabledFloatingLink {
    margin: 0 5px;
}

.disabledFloatingLink {
    cursor: default;
}

.floatingButton {
    color: #fdb813;
    background-color: #003963;
    font-size: 18pt;
    text-decoration: underline;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
}

.floatingButton:hover {    
    text-decoration: none;
}

.disabledFloatingLink > .floatingButton {
    color: lightgray;
    background-color: gray;
    font-size: 18pt;
    text-decoration: underline;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
}

.disabledFloatingLink > .floatingButton:hover {
    text-decoration: underline;
}

#FloatingControlsSpacer {
    height: 100px;
}

.nav-path {
    width: 90%;
    margin: auto;
    margin-top: 30px;
    margin-bottom: 30px;
	padding: 20px;

    /* Shadow */
    -webkit-box-shadow: 3px 3px 10px -4px rgba(0,0,0,0.64);
    -moz-box-shadow: 3px 3px 10px -4px rgba(0,0,0,0.64);
    box-shadow: 3px 3px 10px -4px rgba(0,0,0,0.64);
}

strong, b{
	text-decoration: none;
}

ol {
	padding: 0 0 0 0;
}

.selectbar{
	margin: 0px;
	padding: 0px;
	position: absolute;
	right:0;
	top:0;
	height:100%;
	width:5px;
	background-color: #78ba62;
}

.jsData {
    display: none;
}

.btn {
    text-decoration: none;
    height: 30px;
    background-color: #003963;
    color: white;
    border: none;
    text-align: center;
    padding-top: 12px;
    
    cursor: pointer;
}

.deleteButton {
    background-color: #FF3232;
}

#closeButton {
	position: absolute;
    top: 0;
    right: 0;
	height: 20;
	width: 20;
}

.small-icon {
	padding: 2 2 2 2;
	float: right;
	bottom: 7;
    right: 23;
    cursor: pointer;
	height: 15;
	width: 15;
	position: absolute;
}

.info-icon {
    cursor: pointer;
	height: 17;
	width: 17;
	top: 5px;
	float: right;
	margin-left: 5px;
}

.test_case_delete {
	padding: 2 2 2 2;
	float: right;
	top: 10;
    right: 23;
    cursor: pointer;
	position: absolute;
}


#right-icon {
	padding: 2 2 2 2;
	float: right;
    right: 7;
	position: absolute;
}

#add-icon {
	float: right;
	padding: 2 2 2 2;
	right: 0;
	position: absolute;
	top: 4;
}

.sidebar{
	display: inline-block;
	width: 90%;
	position: relative;
}

#unopened{
	background-color: lightgrey;
}

.btn-center {
    margin: auto;
    width: 90%;
	margin-bottom: 10px;
}

.btn:hover {
    background-color: #2170A8;
}

a.preview {
	color: white;
	text-decoration: none;
}

.pathnav{
    margin-top: 50px;
    width: 100%;

	height:50px;
	background-color: #888888;
	color: white;
	box-shadow: 3px 3px 10px -4px rgba(0,0,0,0.64);
	z-index: 10;
	padding-left: 265px;
	display: flex;
	flex-direction: row;
	justify-content: flex-start;
    align-items: center;
    position: fixed;
}

.pathnav a {
	text-decoration: none;
}

#past_sections_button:hover {
	cursor: pointer;
}

.back-button{

	height: 30px;
    position: absolute;
    top: 9;
    left: 220;
}

.back-img{
	height: 30px;
}

i {
    -webkit-transition:all 300ms ease-in 0s;
    -moz-transition: all 300ms ease-in 0s;
    -o-transition: all 300ms ease-in 0s;
    transition: all 300ms ease-in 0s;
}

.ui-state-active i {
    color: #ACD4CE;
    -webkit-transform: rotate(180deg);
    -moz-transform: rotate(180deg);
    -o-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    transform: rotate(180deg);
}

::-webkit-scrollbar {
    display: none;	
}

atable {
    font-family: arial, sans-serif;
    border-collapse: collapse;
    margin: 0 auto;
    min-width: 100%;
    max-width: 100%;
    
}

a {
	color: inherit;
	text-decoration: none;
}

table {
    font-family: arial, sans-serif;
    border-collapse: collapse;
    margin: 0 auto;
    min-width: 100%;
    max-width: 100%;
}

td, th {
    border: 1px solid #dddddd;
    text-align: left;
    padding: 2px;
    padding-left: 4px;
}

.sidebar-text{
	max-width: 140px;
	word-wrap: word-break;
	hyphens: auto;
}

.list-item{
	padding-left: 15px !important;
}

.dynamicVal {
  color: #8DC26F;
  display: inline;
}

.dyLabel {
  display: inline-block;
}

.feedback-note {
  position: absolute;
  bottom: 30px;
  left: 20px;
}
/*tr:nth-child(even) {
    background-color: #dddddd;
}*/

a{
	cursor: pointer;
}

input[type=text] {
    width: 100%;
    padding: 4px 10px;
    margin: 8px 0;
    box-sizing: border-box;
    border: 2px solid #6C6E71;
    border-radius: 4px;
}

select {
    width: 100px;
    padding: 12px 20px;
    margin: 8px 0;
    box-sizing: border-box;
    border: 2px solid #6C6E71;
    border-radius: 4px;
}

table {
  width: 100%;
}

#teacher-csv{
	height: 50px;
}

#student-csv{
	height: 100px;
}


textarea {
  resize: none;
  width: 100%;
  height: 200px;
}

textarea.problem_creation{
	height: auto;
}

form{
	margin-bottom: 0px;
}

del {
    color: red;
}

ins {
    color: green;
}


.scrolly::-webkit-scrollbar-track
{
	margin-right: 10px;
	background: #71BAFF;
	cursor: pointer;
}

.scrolly::-webkit-scrollbar
{
	cursor: pointer;
	all:unset;
	width: 12px;
	background-color: #F5F5F5;
}

.scrolly::-webkit-scrollbar-thumb
{
	cursor: pointer;
	all: unset;
	border-radius: 10px;
	background-color: rgba(140, 140, 140, 0.9);
}



.ace_scrollbar::-webkit-scrollbar-track
{
	margin-right: 5px;
	background: transparent;
	cursor: pointer;
}

.ace_scrollbar::-webkit-scrollbar
{
	cursor: pointer;
	all:unset;
	width: 6px;
	background-color: #F5F5F5;
}

.ace_scrollbar::-webkit-scrollbar-thumb
{
	cursor: pointer;
	all: unset;
	border-radius: 10px;
	background-color: rgba(140, 140, 140, 0.4);
}

